; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/extr_extension_thread.c_FreeCommands.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/extr_extension_thread.c_FreeCommands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command_t = type { i32, %struct.command_t**, %struct.command_t* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.command_t*)* @FreeCommands to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FreeCommands(%struct.command_t* %0) #0 {
  %2 = alloca %struct.command_t*, align 8
  %3 = alloca %struct.command_t*, align 8
  store %struct.command_t* %0, %struct.command_t** %2, align 8
  %4 = load %struct.command_t*, %struct.command_t** %2, align 8
  %5 = icmp ne %struct.command_t* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %27

7:                                                ; preds = %1
  %8 = load %struct.command_t*, %struct.command_t** %2, align 8
  %9 = getelementptr inbounds %struct.command_t, %struct.command_t* %8, i32 0, i32 2
  %10 = load %struct.command_t*, %struct.command_t** %9, align 8
  store %struct.command_t* %10, %struct.command_t** %3, align 8
  %11 = load %struct.command_t*, %struct.command_t** %2, align 8
  %12 = getelementptr inbounds %struct.command_t, %struct.command_t* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  switch i32 %13, label %22 [
    i32 132, label %14
    i32 130, label %14
    i32 131, label %14
    i32 128, label %15
    i32 129, label %15
  ]

14:                                               ; preds = %7, %7, %7
  br label %23

15:                                               ; preds = %7, %7
  %16 = load %struct.command_t*, %struct.command_t** %2, align 8
  %17 = getelementptr inbounds %struct.command_t, %struct.command_t* %16, i32 0, i32 1
  %18 = load %struct.command_t**, %struct.command_t*** %17, align 8
  %19 = getelementptr inbounds %struct.command_t*, %struct.command_t** %18, i64 0
  %20 = load %struct.command_t*, %struct.command_t** %19, align 8
  %21 = call i32 @free(%struct.command_t* %20)
  br label %23

22:                                               ; preds = %7
  br label %23

23:                                               ; preds = %22, %15, %14
  %24 = load %struct.command_t*, %struct.command_t** %2, align 8
  %25 = call i32 @free(%struct.command_t* %24)
  %26 = load %struct.command_t*, %struct.command_t** %3, align 8
  call void @FreeCommands(%struct.command_t* %26)
  br label %27

27:                                               ; preds = %23, %6
  ret void
}

declare dso_local i32 @free(%struct.command_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
